test/expected/define_eti.out
define SI as extern int
                    ^
21: error: "type external int" is illegal for built-in type
